--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
+    "vue3-autocounter": "^1.0.6",
     "vue3-carousel": "^0.1.35",
     "vue3-smooth-scroll": "^0.8.1"
   },
