--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@j-t-mcc/vue3-chartjs": "^1.2.0",
+    "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
+    "vue3-autocounter": "^1.0.6",
+    "vue3-carousel": "^0.1.35",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
