--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.0.12",
     "vue3-autocounter": "^1.0.6",
     "vue3-carousel": "^0.1.35",
+    "vue3-slider": "^1.8.0",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
