--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
+    "@vueuse/core": "^9.1.0",
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
+    "vue-currency-input": "^3.0.0",
     "vue-router": "^4.0.12",
     "vue3-autocounter": "^1.0.6",
     "vue3-carousel": "^0.1.35",
+    "vue3-slider": "^1.8.0",
     "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
