--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
     "@vueuse/core": "^9.1.0",
+    "aws-s3-upload-ash": "^1.1.4",
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
