--- a/package.json
+++ b/package.json
@@ -29,36 +29,26 @@
         "vue3-smooth-scroll": "^0.8.1"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.22.15",
-        "@tailwindcss/postcss7-compat": "^2.2.17",
-        "@vue/cli-plugin-babel": "^5.0.8",
-        "@vue/cli-service": "~4.5.0",
-        "@vue/compiler-sfc": "^3.0.0",
-        "autoprefixer": "^9.8.8",
-        "babel-eslint": "^10.1.0",
+        "@babel/core": "^7.12.16",
+        "@babel/eslint-parser": "^7.12.16",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-eslint": "~5.0.0",
+        "@vue/cli-plugin-pwa": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
+        "@vue/eslint-config-airbnb": "^6.0.0",
+        "autoprefixer": "^10.4.15",
         "eslint": "^8.49.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-vue": "^9.17.0",
-        "husky": "^8.0.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-vue": "^8.7.1",
+        "eslint-plugin-vuejs-accessibility": "^1.1.0",
+        "husky": "^8.0.3",
         "lint-staged": "^14.0.1",
-        "postcss": "^7.0.39",
-        "prettier": "^3.0.3",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/vue3-essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
+        "postcss": "^8.4.29",
+        "tailwindcss": "^3.3.3",
+        "prettier": "^3.0.3"
     },
     "browserslist": [
         "> 1%",
