--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "altara-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@j-t-mcc/vue3-chartjs": "^1.3.0",
-    "@vueuse/core": "^9.1.0",
-    "aws-s3-upload-ash": "^1.1.4",
-    "aws-sdk": "^2.1204.0",
-    "axios": "^0.25.0",
-    "chart.js": "^3.7.0",
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-axios": "^3.4.0",
-    "vue-currency-input": "^3.0.0",
-    "vue-router": "^4.0.12",
-    "vue3-animate-onscroll": "^1.0.6",
-    "vue3-autocounter": "^1.0.6",
-    "vue3-carousel": "^0.1.35",
-    "vue3-slider": "^1.8.0",
-    "vue3-smooth-scroll": "^0.8.1"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "autoprefixer": "^9.8.8",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "altara-site",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+        "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+        "prepare": "husky install",
+        "postinstall": "husky install"
     },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
+    "dependencies": {
+        "@j-t-mcc/vue3-chartjs": "^1.3.0",
+        "@vueuse/core": "^9.1.0",
+        "aws-s3-upload-ash": "^1.1.4",
+        "aws-sdk": "^2.1204.0",
+        "axios": "^0.25.0",
+        "chart.js": "^3.7.0",
+        "core-js": "^3.6.5",
+        "vue": "^3.0.0",
+        "vue-axios": "^3.4.0",
+        "vue-currency-input": "^3.0.0",
+        "vue-router": "^4.0.12",
+        "vue3-animate-onscroll": "^1.0.6",
+        "vue3-autocounter": "^1.0.6",
+        "vue3-carousel": "^0.1.35",
+        "vue3-slider": "^1.8.0",
+        "vue3-smooth-scroll": "^0.8.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.16",
+        "@babel/eslint-parser": "^7.12.16",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-eslint": "~5.0.0",
+        "@vue/cli-plugin-pwa": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
+        "@vue/eslint-config-airbnb": "^6.0.0",
+        "autoprefixer": "^10.4.15",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-vue": "^8.7.1",
+        "eslint-plugin-vuejs-accessibility": "^1.1.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
+        "postcss": "^8.4.29",
+        "tailwindcss": "^3.3.3",
+        "prettier": "^3.0.3"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
     ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "lint-staged": {
+        "*.{vue,js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
+    }
 }
